--- a/src/components/2-hero/hero.css
+++ b/src/components/2-hero/hero.css
@@ -160,10 +160,13 @@ h1 {
         width: 100%;
         padding-bottom: 10px;
     }
+     .hero_container .img {
+        padding-bottom: 100px;
+     }
     .img .purple-squar {
         width: 100%;
         height: 20%;
-        top: 55%;
+        top: 50%;
         right: 0%;
     }
 }
