--- a/src/components/5-filterButtons/filterButtons.css
+++ b/src/components/5-filterButtons/filterButtons.css
@@ -65,13 +65,36 @@
 /*****************************************/
 /* TABLET MEDIUM & LARGE VERSION ONLY */
 
-@media (max-width: 992px) {}
+@media (max-width: 992px) {
+.projects-filter-btns {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+} 
+/* .projects-filter-btns button span {
+    display: none;
+} */
+.projects-filter-btns button {
+    justify-content: center;
+    padding-left: 0px;
+    width: 8rem;
+    height: 2rem;
+    margin: 4px auto;
+}
+}
 /*******************************************/
 /* TABLET SMALL VERSION ONLY */
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+    
+}
 
 /****************************************/
 /* MOBILE VERSION ONLY */
 
-@media (max-width: 576px) {}
+@media (max-width: 500px) {
+    .projects-filter-btns button {
+        width: 6rem;
+        font-size: 10px;
+    }
+}
